# efactory

./: .copier-answers.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  BACKLOG.md  BOARD.md  CHANGELOG.md  CLAUDE.md  CONCEPT.md  DECISIONS.md  Dockerfile  Dockerfile.libs  README.md  alembic.ini  efactory-up  hatch_build.py  pyproject.toml
data/models/: README.md
data/models/diodes/duncan/: 1N4007.lib  1N4148.lib  BAT85.lib
data/models/loads/generic/: DUMMY_LOAD_8R.lib  SPEAKER_4OHM.lib  SPEAKER_8OHM.lib  SPEAKER_8OHM_RES.lib
data/models/transformers/generic/: OPT_PP_6K6_8.lib  OPT_SE_5K_8.lib
data/models/tubes/: README.md
data/models/tubes/ayumi/: 211.inc  2A3.inc  300B.inc  6080.inc  6C33C.inc  6DJ8.inc  6V6_AYUMI.inc  845.inc  GENERIC_PENTODE.inc
data/models/tubes/custom/: 5C3S.lib  5C4S.lib  6C4P.lib  6N1P.lib  6N2P.lib  6N3P.lib  6N6P.lib  6N8S.lib  6N9S.lib  6P14P.lib  6P15P.lib  6P18P.lib  6P1P.lib  6P3S.lib  6P45S.lib  GM70.lib  GU50.lib
data/models/tubes/duncan/: 12AX7_DUNCAN.cir  300B_DUNCAN.cir  6AS7G.cir  6BM8.cir  6SL7.cir  6SN7_DUNCAN.cir  EL34_DUNCAN.cir  KT66.cir  KT77.cir  KT90.cir
data/models/tubes/koren/: 12AT7.lib  12AU7.lib  12AX7.lib  12BH7.lib  5881.lib  5AR4.lib  5U4G.lib  5Y3GT.lib  6CG7.lib  6L6.lib  6SN7.lib  6V6.lib  7027.lib  7591.lib  EF86.lib  EL34.lib  EZ80.lib  EZ81.lib  GENERIC_TRIODE.lib  KT88.lib
hooks/: pre-push
scripts/: gen-bracket-demo.FCMacro  gen-bracket-demo.py  gen-se-amp-demo.py  patch_tubes_pwrs.py  run-kicad.sh  smoke-gui.sh
specs/: spec-template.md
specs/T004-kicad-sim-pipeline/: spec.md
specs/T006-tube-library/: spec.md
specs/T007-transformer-models/: spec.md
specs/T008-spice-analyses/: spec.md
specs/T009-platform-and-apps/: spec.md
specs/T010-git-init-and-logging/: spec.md
specs/T085-architecture-foundation/: spec.md
specs/T095-auto-install-hook/: spec.md
specs/T096-domain-expansion/: spec.md
specs/T097-phase-vo/: spec.md
specs/T098-manifest-primary/: spec.md
specs/T099-decision-aggregate/: spec.md
specs/T100-kicad-sch-api/: spec.md
specs/T110-containerization/: spec.md
src/: main.py
src/adapters/: README.md
src/adapters/inbound/cli/: app.py  spice_units.py
src/adapters/outbound/decision_markdown/: __init__.py  decision_repository.py
src/adapters/outbound/file_store/: project_file_repository.py
src/adapters/outbound/git_subprocess/: __init__.py  git_repository.py
src/adapters/outbound/kicad_cli/: __init__.py  schematic_exporter.py
src/adapters/outbound/manifest_yaml/: __init__.py  project_manifest_repository.py
src/adapters/outbound/ngspice/: __init__.py  raw_parser.py  simulator.py  wrapper.py
src/adapters/outbound/persistence_sql/: mapping.py  migrations_runner.py  models.py  repository.py
src/adapters/outbound/platform_native/: __init__.py  platform_layer.py
src/adapters/outbound/schematic_kicad/: __init__.py  facade.py  writer.py
src/adapters/outbound/session_jsonl/: __init__.py  session_logger.py
src/adapters/outbound/spice_models/: __init__.py  conversion.py  spice_library.py
src/adapters/outbound/stub_simulator/: __init__.py  simulator.py
src/adapters/outbound/subprocess_apps/: __init__.py  app_manager.py
src/adapters/outbound/tube_models/: __init__.py  conversion.py  tube_library.py
src/application/: README.md  add_decision.py  bridge_sweep.py  create_project.py  delete_project.py  design_to_netlist.py  design_to_sim.py  edit_and_resim.py  edit_component_model.py  edit_component_value.py  errors.py  get_decision.py  get_project.py  list_decisions.py  list_projects.py  reindex_projects.py  schematic_snapshot.py  sim_run.py  update_project.py
src/composition/: README.md  main.py  settings.py
src/domain/: README.md  _name.py  application.py  decision.py  phase.py  project.py  schematic.py  simulation.py  spice_model.py
src/ports/: README.md
src/ports/outbound/: app_manager.py  decision_repository.py  git_repository.py  metadata_repository.py  platform_layer.py  project_file_repository.py  project_manifest_repository.py  schematic_exporter.py  schematic_writer.py  session_logger.py  simulator.py  spice_model_library.py  tube_model_library.py
tests/: conftest.py  test_main.py
tests/e2e/spice_acceptance/: test_rc_filter.py
tests/e2e/walking_skeleton/: test_bridge_design_to_sim.py  test_bridge_edit_and_resim.py  test_bridge_sweep.py  test_create_partial_failure.py  test_create_project.py  test_decision_crud.py  test_delete_project.py  test_get_project.py  test_git_init_and_session_log.py  test_list_projects.py  test_reindex_portability.py  test_reindex_project.py  test_transformer_and_load.py  test_tube_library.py  test_update_project.py
tests/fixtures/: rc_filter.kicad_sch
tests/integration/: test_freecad_runtime_smoke.py
tests/integration/adapters/decision_markdown/: test_decision_repository.py
tests/integration/adapters/file_store/: test_project_file_repository.py
tests/integration/adapters/git_subprocess/: test_git_repository.py
tests/integration/adapters/graph_store/: test_kuzu_smoke.py
tests/integration/adapters/kicad_cli/: test_schematic_exporter.py
tests/integration/adapters/manifest_yaml/: test_project_manifest_repository.py
tests/integration/adapters/ngspice/: test_ngspice_simulator.py  test_raw_parser.py
tests/integration/adapters/persistence_sql/: test_migration_backfill.py  test_migration_updated_at_backfill.py  test_project_repository.py
tests/integration/composition/: test_main.py
tests/unit/application/: test_create_project.py  test_decision_use_cases.py  test_delete_project.py  test_design_to_netlist.py  test_design_to_sim.py  test_edit_component_model.py  test_edit_component_value.py  test_errors.py  test_get_project.py  test_list_projects.py  test_reindex_projects.py  test_schematic_snapshot.py  test_sim_run.py  test_update_project.py
tests/unit/composition/: test_settings.py
tests/unit/domain/: test_analysis_spec.py  test_application.py  test_decision.py  test_phase.py  test_project.py  test_schematic.py  test_simulation.py  test_spice_model.py
(+44 files in other folders)
