[project]
name = "efactory"
version = "0.1.0"
description = "Система сквозного проектирования РЭА с использованием ИИ"
readme = "README.md"
authors = [
    {name = "Vladimir Kirievskiy", email = "vlakir1234@gmail.com"},
]
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "kuzu>=0.11.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2.0.49",
    "typer>=0.25.1",
]

[project.scripts]
efactory = "composition.main:run"

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "mypy>=1.17.1",
    "pytest>=8.4",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.0",
    "import-linter>=2.11",
    "pre-commit>=4.6.0",
    "types-pyyaml>=6.0.12.20260510",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = [
    "src/domain",
    "src/application",
    "src/ports",
    "src/adapters",
    "src/composition",
]

# data/ — статические built-in ресурсы (SPICE-модели ламп — T006,
# шаблоны KiCad-проектов — позже). Включаются в wheel rooted at
# `data/` чтобы при `pip install` пути остались стабильными.
[tool.hatch.build.targets.wheel.force-include]
"data/models" = "data/models"


[tool.hatch.build.hooks.custom]
path = "hatch_build.py"


[tool.ruff]
unsafe-fixes = true
line-length = 88
indent-width = 4
target-version = "py314"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "build",
    "dist",
    "tests",
    "src/adapters/outbound/persistence_sql/migrations",
]


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1", "D203", "D212",
    "BLE001", "ANN002", "ANN204",
    "RUF001", "COM812", "RUF002",
    "RUF003", "G004", "PLR0912",
    "PLR0913", "D401", "PLR0915",
    "C901", "D205", "N802",
    # S603 — subprocess call without shell=True and with argv-list/resolved
    # paths is the safe form; this rule flags it nonetheless. Suppressed
    # project-wide (introduced in T095 hatch_build.py). User-supplied
    # subprocess input is still expected to be validated at call site.
    "S603",
]
fixable = ["ALL"]
unfixable = []


[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"


[tool.ruff.lint.flake8-bugbear]
# typer.Option / typer.Argument возвращают immutable OptionInfo/ArgumentInfo,
# Typer перехватывает их по типу — это идиоматический Typer-паттерн.
# По умолчанию bugbear считает их "function call default" (B008) только
# для не-builtin типов (для `str` промалчивает). Декларируем явно — это
# не подавление ошибок, а корректное описание immutable-возвращающих
# вызовов. Рекомендация Typer/ruff docs для CLI-проектов на Typer.
extend-immutable-calls = ["typer.Option", "typer.Argument"]


[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
    "sqlalchemy.orm.DeclarativeBase",
]


[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
mypy_path = "src"
plugins = ["pydantic.mypy"]
exclude = ["src/adapters/outbound/persistence_sql/migrations/"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "-q --tb=short --cov=src --cov-report=term-missing --cov-fail-under=80 --import-mode=importlib"
testpaths = ["tests"]


[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/adapters/outbound/persistence_sql/migrations/*",
    "src/ports/**/*",
]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false


[tool.importlinter]
root_packages = [
    "domain",
    "application",
    "ports",
    "adapters",
    "composition",
]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Hexagonal layers: composition > adapters > application > ports > domain"
type = "layers"
layers = [
    "composition",
    "adapters",
    "application",
    "ports",
    "domain",
]

[[tool.importlinter.contracts]]
name = "domain depends only on pydantic and stdlib"
type = "forbidden"
source_modules = ["domain"]
forbidden_modules = [
    "sqlalchemy",
    "aiosqlite",
    "alembic",
    "kuzu",
    "mcp",
    "anthropic",
    "typer",
]

[[tool.importlinter.contracts]]
name = "Adapters don't import each other"
type = "independence"
modules = [
    "adapters.inbound.cli",
    "adapters.outbound.persistence_sql",
    "adapters.outbound.file_store",
    "adapters.outbound.manifest_yaml",
    "adapters.outbound.decision_markdown",
    "adapters.outbound.git_subprocess",
    "adapters.outbound.session_jsonl",
    "adapters.outbound.spice_models",
]
